# crow_example1

./: .gitignore  CMakeLists.txt  README.md  do_requests.sh
.github/workflows/: cmake-multi-platform.yml
src/: auth.cpp  auth.hpp  bp_main.cpp  bp_user_registration.cpp  bp_user_registration.hpp  main.cpp  model.cpp  model.hpp  testing.http  web_main.cpp
src/template/: post_edit.html  posts.html
